# DXP-Airflow

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.demo.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: check-lint-and-format.yaml
airflow/: airflow.cfg  webserver_config.py
airflow/dags/: my_first_dag.py  my_second_dags.py  trigger_adf_dag.py  trigger_streamsets.py
airflow/dags/examples/azure_blob_to_snowflake_dag/: azure_blob_to_snowflake_dag.py
airflow/dags/examples/my_first_dag/: my_first_dag.py
airflow/dags/execute_snowflake_task/: dag_execute_snowflake_task.py  snowflake_task.sql
airflow/rs_airflow/: pyproject.toml
airflow/rs_airflow/rs_airflow/: __init__.py  types.py
airflow/rs_airflow_infras/: pyproject.toml
docs/: 0000_Pyenv_and_Python_env.md  0001_Python_virtualenv.md  0001_Setup_local_development.md  0002_Java.md  1001_Setup_K8s.md  1001_Setup_local_development.md  1002_Tutorial_basic_dag.md  2001_Setup_K8s.md
k8s/: UatLeever.values.yaml
rs_airflow/: README.md  pyproject.toml
rs_airflow/rs_airflow/: __init__.py
rs_airflow/rs_airflow/spark/libs/: driver_managers.py  jdbc_config_manager.py  spark_builder.py
rs_airflow/rs_airflow/spark/transfers/: __init__.py  sql_to_elastic.py  sql_to_sql.py
rs_airflow/rs_airflow/streamsets/: __init__.py  hooks.py  trigger_streamsets_operator.py
rs_airflow/rs_airflow/streamsets/operators/: __init__.py  trigger_streamsets_operator.py  trigger_streamsets_sensor.py
rs_airflow/rs_airflow/transfers/: README.md  __init__.py  azure_blob_storage_to_snowflake.py  azure_blob_storage_to_sql_server.py  sql_to_elasticsearch.py  sql_to_sql.py
rs_airflow/rs_airflow/transfers/deprecated/: __init__.py  sql_to_elasticsearch.py  sql_to_sql.py
(+25 files in other folders)
