[project]
name = "dxp_airflow"
version = "1.0.0"
authors = [
    {name = "Thuy Nguyen", email = "thuy.n@stor.ai"},
]
description = "DXP-Airflow"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

[tool.black]
line-length = 120

[tool.flake8]
max_line_length = 120