[project]
name = "rs_airflow"
version = "0.2.0"
authors = [{ name = "Thuy Nguyen", email = "thuy.n@stor.ai" }]
description = "A sample Apache Airflow provider package built by Astronomer."
requires-python = "~=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project.entry-points.apache_airflow_provider]
provider_info = "rs_airflow.__init__:get_provider_info"
